tests/regression/baselines/err_nested_record_pattern_duplicates.expected
ERROR
SyntaxError: Invalid wildcard match pattern
match {a = {b = {c = 1}}} with
  | {a = {b = {c = x}; b = y}} -> x + y  // 'b' appears twice
    ^~~~~~~~~~~~~~~~~~~~~~~~~~                                
